[package]
name = "dbus-udisks2"
version = "0.3.1"
edition = "2021"
description = "UDisks2 DBus API"
repository = "https://github.com/Alex313031/dbus-udisks2"
authors = [ "Michael Aaron Murphy <mmstickman@gmail.com>", "Alexander Frick <alex313031@gmail.com>" ]
license = "MIT"
readme = "README.md"

[dependencies]
dbus = "0.9.7"
num_enum = "0.5.11"
futures-util = { version = "0.3.12", features = ["async-await"], optional = true }

[dev-dependencies]
tokio = { version = "0.2.25", features = ["macros"] }
dbus-tokio = "0.6.0"

[features]
futures = ["dbus/futures", "futures-util"]

[package.metadata.docs.rs]
all-features = true
